inspector library refactored to support in library testing and doc

--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Error.cshtml
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Pages/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model librarytemplate.blazor.Pages.ErrorModel
+@model axopen.inspectors.blazor.Pages.ErrorModel
 
 <!DOCTYPE html>
 <html lang="en">
