--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/MainLayout.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@namespace inspectors.blazor.Shared
+@inherits LayoutComponentBase
 
-<PageTitle>librarytemplate.blazor</PageTitle>
+<PageTitle>axopen.inspectors.blazor</PageTitle>
 
 <div class="page">
     <div class="sidebar">
