--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/_Imports.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/_Imports.razor
@@ -7,8 +7,10 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using librarytemplate.blazor
-@using librarytemplate.blazor.Shared
+@using axopen.inspectors.blazor
+@using inspectors.blazor.Shared
+@using inspectors.blazor
+
 
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.Extensions.Localization
