--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@namespace inspectors.blazor.Shared
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">librarytemplate.blazor</a>
+        <a class="navbar-brand" href="">axopen.inspectors.blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
