Cognex insight: added messengers

--- a/src/components.cognex.vision/app/ix-blazor/_Imports.razor
+++ b/src/components.cognex.vision/app/ix-blazor/_Imports.razor
@@ -1,4 +1,5 @@
 ﻿@using System.Net.Http
+@using AXOpen.Core.Resources
 @using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.Forms
@@ -11,3 +12,7 @@
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using axopen_components_cognex_vision_integrations
 @using AXOpen.Core;
+
+
+
+
