Added _asp and _alertDialogService into AxoDataDocuExamples

--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataDocuExamples.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/DocuExamples/AxoDataDocuExamples.razor
@@ -1,5 +1,8 @@
 ﻿@page "/DocuExamples/AxoDataDocuExamples"
+@using AXOpen.Base.Dialogs;
 @using AXOpen.Data;
+@inject IAlertDialogService _alertDialogService;
+@inject AuthenticationStateProvider _asp;
 
 
 <h3>Editable</h3>
