--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
@@ -25,6 +25,11 @@
                 <span class="oi oi-plus" aria-hidden="true"></span> Documentation
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="security">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Security
+            </NavLink>
+        </div>
     </nav>
 </div>
 
