--- a/src/components.cognex.vision/app/ix-blazor/Pages/AxoCognexVision/AxoCognexVisionExample.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/AxoCognexVision/AxoCognexVisionExample.razor
@@ -34,6 +34,15 @@
         <div class="col">
             <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman2" Presentation="Command" />
         </div>
+        <div class="col" hidden="hidden">
+            //<CognexInsightRenderedView>
+            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyInsight" Presentation="Command" />
+            //</CognexInsightRenderedView>
+        </div>
+        <div class="col" hidden="hidden">
+            //<CognexDatamanRenderedView>
+            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman1" Presentation="Command" />
+            //</CognexDatamanRenderedView>
+        </div>
     </div>
 </div>
-
