--- a/src/components.cognex.vision/app/ix-blazor/Pages/Testing.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/Testing.razor
@@ -1,9 +1,10 @@
-﻿@page "/AxoCognexVisionExample"
+﻿@page "/Testing"
 @using axopen_components_cognex_vision_integrations
 @using AXOpen.Core;
 @using AXOpen.Cognex.Vision.v_6_0_0_0;
 
-<h3>AxoCognexVisionExample</h3>
+
+<PageTitle>Testing</PageTitle>
 
 <div class="container">
     <div class="h4 pb-2 mb-4 text-primary border-bottom border-primary">
@@ -33,16 +34,6 @@
         </div>
         <div class="col">
             <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman2" Presentation="Command" />
-        </div>
-        <div class="col" hidden="hidden">
-            //<CognexInsightRenderedView>
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyInsight" Presentation="Command" />
-            //</CognexInsightRenderedView>
-        </div>
-        <div class="col" hidden="hidden">
-            //<CognexDatamanRenderedView>
-            <RenderableContentControl Context="@Entry.Plc.AxoCognexVisionExampleContext.MyDataman1" Presentation="Command" />
-            //</CognexDatamanRenderedView>
         </div>
     </div>
 </div>
