--- a/src/components.cognex.vision/app/ix-blazor/Shared/NavMenu.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Shared/NavMenu.razor
@@ -19,17 +19,23 @@
 <div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
     <nav class="flex-column">
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="Simatic-ax">
-                <span class="oi oi-plus" aria-hidden="true"></span> Simatic-AX
+            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="AxoCognexVisionExample">
-                <span class="oi oi-plus" aria-hidden="true"></span> AxoCognexVisionExample
+            <NavLink class="nav-link" href="testing">
+                <span class="oi oi-plus" aria-hidden="true"></span> Testing
             </NavLink>
         </div>
-   </nav>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="documentation">
+                <span class="oi oi-plus" aria-hidden="true"></span> Documentation
+            </NavLink>
+        </div>
+    </nav>
 </div>
+
 
 @code {
     private bool collapseNavMenu = true;
@@ -41,3 +47,4 @@
         collapseNavMenu = !collapseNavMenu;
     }
 }
+
