--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/MainLayout.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
-﻿@inherits LayoutComponentBase
+﻿@namespace inspectors.blazor.Shared
+@inherits LayoutComponentBase
 
-<PageTitle>librarytemplate.blazor</PageTitle>
+<PageTitle>axopen.inspectors.blazor</PageTitle>
 
 <div class="page">
     <div class="sidebar">
@@ -9,7 +10,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <AxOpen.Security.Views.LoginDisplay />
         </div>
 
         <article class="content px-4">
