--- a/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
+++ b/src/inspectors/app/ix-blazor/AXOpen.Inspectors.blazor/Shared/NavMenu.razor
@@ -1,6 +1,7 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
+﻿@namespace inspectors.blazor.Shared
+<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">librarytemplate.blazor</a>
+        <a class="navbar-brand" href="">axopen.inspectors.blazor</a>
         <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -22,6 +23,11 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="documentation">
                 <span class="oi oi-plus" aria-hidden="true"></span> Documentation
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="security">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Security
             </NavLink>
         </div>
     </nav>
