--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Pages/_Host.cshtml
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Pages/_Host.cshtml
@@ -28,7 +28,7 @@
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
     </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
