--- a/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Shared/MainLayout.razor
+++ b/src/template.axolibrary/app/ix-blazor/librarytemplate.blazor/Shared/MainLayout.razor
@@ -9,7 +9,7 @@
 
     <main>
         <div class="top-row px-4">
-            <a href="https://docs.microsoft.com/aspnet/" target="_blank">About</a>
+            <AxOpen.Security.Views.LoginDisplay />
         </div>
 
         <article class="content px-4">
