--- a/src/components.pneumatics/app/ix-blazor/PneumaticComponents.blazor/Pages/Documentation.razor
+++ b/src/components.pneumatics/app/ix-blazor/PneumaticComponents.blazor/Pages/Documentation.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Documentation"
 
 <PageTitle>Documentation</PageTitle>
-
-<RenderableContentControl Context="@Entry.Plc.documentation" Presentation="Command-Control" PollingInterval="100"/>
+//<RenderedView>
+    <RenderableContentControl Context="@Entry.Plc.documentation.myAxoCylinder" Presentation="Command" />
+//</RenderedView>
