--- a/src/TestSandbox/SandBoxTest.app/_Imports.razor
+++ b/src/TestSandbox/SandBoxTest.app/_Imports.razor
@@ -8,12 +8,13 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.Extensions.Localization
 @using Microsoft.JSInterop
-@using sandboxtest.Resources
+@using SandBoxTest.Resources
 @using sandboxtest.hmi
 @using sandboxtest.hmi.Resources
 @using sandboxtest.hmi.Shared
 @using sandboxtest.hmi.Shared.Menu
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
+@using SandBoxTest.Resources
 
 @inject IStringLocalizer<BlazorResources> Localizer
 @inject IStringLocalizer<PlcStringResources> PlcLocalizer
