--- a/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoComponent/AxoComponentView.razor
@@ -17,7 +17,7 @@
         </div>
         <div class="p-1 flex-shrink-1">
             
-            @switch (AlarmLevel().Result)
+            @switch (AlarmLevel)
             {
                 case eAlarmLevel.NoAlarms:
                     break;
@@ -88,7 +88,7 @@
         </div>
     }
     
-    @if (AlarmLevel().Result > eAlarmLevel.NoAlarms)
+    @if (AlarmLevel > eAlarmLevel.NoAlarms)
     {
         @if (!areAlarmsCollapsed)
         {
