--- a/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
+++ b/src/data/src/AXOpen.Data.Blazor/AxoDataExchange/Command/AxoDataExchangeBaseCommandView.razor
@@ -5,13 +5,13 @@
 @using Microsoft.AspNetCore.Components.Authorization;
 @inherits RenderableComplexComponentBase<AxoDataExchangeBase>;
 @inject IAlertDialogService _alertDialogService
-@inject AuthenticationStateProvider _asp
+@inject AuthenticationStateProvider _authenticationProvider
 
 <DataExchangeView Vm="_vm" Presentation="Command"></DataExchangeView>
 
 @code
 {
-    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = _alertDialogService, Asp = _asp };
+    private DataExchangeViewModel _vm => new DataExchangeViewModel { Model = this.Component, AlertDialogService = _alertDialogService, AuthenticationProvider = _authenticationProvider };
 
     public override void AddToPolling(ITwinElement element, int pollingInterval = 250)
     {
