--- a/src/components.cognex.vision/app/ix-blazor/Pages/Documentation.razor
+++ b/src/components.cognex.vision/app/ix-blazor/Pages/Documentation.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Documentation"
 @using axopen_components_cognex_vision_integrations
 @using AXOpen.Core;
-@using AXOpen.Cognex.Vision.v_6_0_0_0;
+@using AXOpen.Components.Cognex.Vision.v_6_0_0_0;
 
 <PageTitle>Documentation</PageTitle>
 
