--- a/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCognexVision/AxoCognexVisionInsightExample.razor
+++ b/src/integrations/src/AXOpen.Integrations.Blazor/Pages/AxoCognexVision/AxoCognexVisionInsightExample.razor
@@ -1,7 +1,7 @@
 ﻿@page "/AxoCognexVisionInsightExample"
 @using axopen_integrations
 @using AXOpen.Core;
-@using AXOpen.Cognex.Vision.v_6_0_0_0;
+@using AXOpen.Components.Cognex.Vision.v_6_0_0_0;
 
 <h3>AxoCognexVisionInsightExample</h3>
 
