--- a/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoAlertDialog/AxoAlertDialogLocator.razor
@@ -7,6 +7,7 @@
 @inject NavigationManager NavigationManager
 @inject IAlertDialogService AlertDialogService
 @inject AxoDialogContainer DialogContainer
+@inherits ComponentBase
 @implements IDisposable
 
 @if (IsScoped)
