increase up to 20 stations

--- a/src/TestSandbox/SandBoxTest.app/Shared/NavMenu.razor
+++ b/src/TestSandbox/SandBoxTest.app/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
 
 
             <ExpandableMenuItem Name="CUs" Icon="oi oi-align-center">
-                <MenuItem Name="I/O" Link="/ui/io" Icon="oi oi-cog" />
+                <MenuItem Name="AllAuto" Link="/ui/CuAllAuto" Icon="oi oi-cog" />
                 <MenuItem Name="CU1" Link="/ui/Cu1" Icon="oi oi-cog" />
                 <MenuItem Name="CU2" Link="/ui/Cu2" Icon="oi oi-cog" />
                 <MenuItem Name="CU3" Link="/ui/Cu3" Icon="oi oi-cog" />
@@ -23,6 +23,7 @@
                 <MenuItem Name="CU6" Link="/ui/Cu6" Icon="oi oi-cog" />
                 <MenuItem Name="CU7" Link="/ui/Cu7" Icon="oi oi-cog" />
                 <MenuItem Name="CU8" Link="/ui/Cu8" Icon="oi oi-cog" />
+                <MenuItem Name="I/O" Link="/ui/io" Icon="oi oi-cog" />
             </ExpandableMenuItem>
 
           
