--- a/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoSequencer/AxoSequencerView.razor
+++ b/src/core/src/AXOpen.Core.Blazor/AxoCoordination/AxoSequencer/AxoSequencerView.razor
@@ -64,7 +64,7 @@
     }
     @if (HasStepDetails)
     {
-        <div style="height: 300px; overflow: auto;">
+        <div style="height: auto; overflow: auto;">
             <AxoStepView Component="Component.CurrentStep"></AxoStepView>
             @* <table class="table">
                 <thead>
