pridany blazor proj

--- a/src/TestSandbox/SandBoxTest.app/Pages/UI/CuAllAuto.razor
+++ b/src/TestSandbox/SandBoxTest.app/Pages/UI/CuAllAuto.razor
@@ -3,26 +3,27 @@
 @using sandboxtest.hmi.Components;
 @inherits RenderableComponentBase;
 
-<UnitsSequences Component="@Entry.Plc.Context.Cu_0" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_1" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_2" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_3" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_4" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_5" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_6" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_7" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_8" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_9" PollingInterval="100"></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_0" PollingInterval="50"></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_1" PollingInterval="200"></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_1" PollingInterval="600"></UnitsSequences>
+@* <UnitsSequences Component="@Entry.Plc.Context.Cu_2" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_3" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_4" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_5" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_6" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_7" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_8" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_9" ></UnitsSequences>
 
-<UnitsSequences Component="@Entry.Plc.Context.Cu_10" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_11" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_12" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_13" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_14" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_15" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_16" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_17" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_18" PollingInterval="100"></UnitsSequences>
-<UnitsSequences Component="@Entry.Plc.Context.Cu_19" PollingInterval="100"></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_10" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_11" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_12" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_13" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_14" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_15" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_16" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_17" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_18" ></UnitsSequences>
+<UnitsSequences Component="@Entry.Plc.Context.Cu_19" ></UnitsSequences> *@
 
 
