--- a/src/TestSandbox/SandBoxTest.app/Pages/InStationData/InStationData.razor
+++ b/src/TestSandbox/SandBoxTest.app/Pages/InStationData/InStationData.razor
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-
+@* 
     <div class="accordion-item">
         <h2 class="accordion-header" id="heading_3">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_3" aria-expanded="false" aria-controls="collapse_3">
@@ -125,7 +125,7 @@
                 </StructureWithRefresh>
             </div>
         </div>
-    </div>
+    </div> *@
 
 </div>
 
