--- a/src/TestSandbox/SandBoxTest.app/Shared/NavMenu.razor
+++ b/src/TestSandbox/SandBoxTest.app/Shared/NavMenu.razor
@@ -8,34 +8,26 @@
 
             <MenuItem Name="Home" Link="/" Icon="oi oi-home" />
 
+            <MenuItem Name="Process data" Link="/ui/EntireProcessData" Icon="oi oi-cog" />
+
             <MenuItem Name="Production data" Link="/ui/EntireProductionData" Icon="oi oi-cog" />
-            <MenuItem Name="Process data" Link="/ui/ProcessData" Icon="oi oi-cog" />
+
             <MenuItem Name="In StationData data" Link="/ui/InStationData" Icon="oi oi-cog" />
 
 
             <ExpandableMenuItem Name="CUs" Icon="oi oi-align-center">
+
                 <MenuItem Name="AllAuto" Link="/ui/CuAllAuto" Icon="oi oi-cog" />
+                <MenuItem Name="CU0" Link="/ui/Cu0" Icon="oi oi-cog" />
                 <MenuItem Name="CU1" Link="/ui/Cu1" Icon="oi oi-cog" />
                 <MenuItem Name="CU2" Link="/ui/Cu2" Icon="oi oi-cog" />
-                <MenuItem Name="CU3" Link="/ui/Cu3" Icon="oi oi-cog" />
-                <MenuItem Name="CU4" Link="/ui/Cu4" Icon="oi oi-cog" />
-                <MenuItem Name="CU5" Link="/ui/Cu5" Icon="oi oi-cog" />
-                <MenuItem Name="CU6" Link="/ui/Cu6" Icon="oi oi-cog" />
-                <MenuItem Name="CU7" Link="/ui/Cu7" Icon="oi oi-cog" />
-                <MenuItem Name="CU8" Link="/ui/Cu8" Icon="oi oi-cog" />
+         
                 <MenuItem Name="I/O" Link="/ui/io" Icon="oi oi-cog" />
             </ExpandableMenuItem>
 
-          
+
             <ExpandableMenuItem Name="Production" Icon="oi oi-align-center">
                 <MenuItem Name="Prod. CU1" Link="/ui/ProdData_Cu1" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU2" Link="/ui/ProdData_Cu2" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU3" Link="/ui/ProdData_Cu3" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU4" Link="/ui/ProdData_Cu4" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU5" Link="/ui/ProdData_Cu5" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU6" Link="/ui/ProdData_Cu6" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU7" Link="/ui/ProdData_Cu7" Icon="oi oi-cog" />
-                <MenuItem Name="Prod. CU8" Link="/ui/ProdData_Cu8" Icon="oi oi-cog" />
             </ExpandableMenuItem>
 
 
