small changes to component elements docu

--- a/src/components.elements/app/ix-blazor/ElementsComponents.blazor/_Imports.razor
+++ b/src/components.elements/app/ix-blazor/ElementsComponents.blazor/_Imports.razor
@@ -8,7 +8,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
 @using elementscomponents.blazor
-@using ElementsComponents.blazor.Shared
+@using elementscomponents.blazor.Shared
 
 @using AXSharp.Presentation.Blazor.Controls.RenderableContent
 @using Microsoft.Extensions.Localization
